# python-grpc

./: pyproject.toml
grpc_test/: __main__.py  test.py
grpc_test/hello_world/: __init__.py
grpc_test/hello_world/protos/: hello_world.proto  hello_world_pb2.py  hello_world_pb2.pyi  hello_world_pb2_grpc.py
